@@ -313,6 +313,7 @@ EC_TAG_SELECT_PREFS                       0x1000
 		EC_TAG_SERVERS_SAFE_SERVER_CONNECT        0x1709
 		EC_TAG_SERVERS_AUTOCONN_STATIC_ONLY       0x170A
 		EC_TAG_SERVERS_MANUAL_HIGH_PRIO           0x170B
+		EC_TAG_SERVERS_UPDATE_URL                 0x170C
 
 	EC_TAG_PREFS_FILES                        0x1800
 		EC_TAG_FILES_ICH_ENABLED                  0x1801
@@ -372,7 +373,7 @@ EC_TAG_SELECT_PREFS                       0x1000
 		EC_TAG_CORETW_SRV_KEEPALIVE_TIMEOUT       0x1D05
 
 	EC_TAG_PREFS_KADEMLIA                     0x1E00
-		EC_TAG_KADEMLIA_URL_LIST                  0x1E01
+		EC_TAG_KADEMLIA_UPDATE_URL                0x1E01
 [/Section]
 
 [Section Content]
@@ -427,4 +428,5 @@ EC_PREFS_DIRECTORIES    0x00000200
 EC_PREFS_STATISTICS     0x00000400
 EC_PREFS_SECURITY       0x00000800
 EC_PREFS_CORETWEAKS     0x00001000
+EC_PREFS_KADEMLIA       0x00002000
 [/Section]
